--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             fill="#ff7aa2"/>
     </svg>
 
-    <h1>Khetho..Do you want me close even if it's messy 😋??</h1>
+    <h1>angitsi utongitsengela hot comb kusasa ngemali yakho off course ☺ ??</h1>
 
     <section class="button-zone" id="zone">
       <button id="yesBtn">Yes</button>
@@ -301,4 +301,5 @@
 </body>
 
 </html>
+
 
